# gazelle_haskell_modules

./: .bazelignore  .bazelrc  .gitignore  AUTHORS  BUILD.bazel  CONTRIBUTING.md  Dockerfile  README.md  WORKSPACE  defs.bzl  nixpkgs.nix  shell.nix  snapshot-8.10.7.json  snapshot-8.10.7.yaml  snapshot-9.0.2.json  snapshot-9.0.2.yaml  snapshot-9.2.2.json  snapshot-9.2.5.json  snapshot-9.2.5.yaml  snapshot-9.2.8.json  snapshot-9.4.5.json  snapshot-9.4.5.yaml  snapshot-9.4.8.json  snapshot-9.4.8.yaml  snapshot-9.6.2.json  snapshot-9.6.2.yaml  snapshot-9.6.5.json  snapshot-9.8.1.json  snapshot.yaml  stack_debug.diff
.github/: dependabot.yml  mergify.yml
.github/workflows/: workflow.yaml
example/: BUILD.bazel  README.md  WORKSPACE  snapshot.yaml  stack_debug.diff
example/fix-cleanup-modules/: BUILD.bazel
example/fix-cleanup-modules/src/PackageB/Exposed/: A.hs
example/fix-cleanup-modules/src/PackageB/Other/: D.hs
example/fix-cleanup-modules/tests/: Main.hs
example/fix-cleanup-modules/tests/PackageB/Other/: C.hs
example/package-a/: BUILD.bazel
example/package-a/app/: AnotherMain.hs  Main.hs
example/package-a/app/PackageA/Other/: C.hs
example/package-a/nonmoduleslib/: NonModulesLib.hs
example/package-a/src-v2/PackageA/Exposed/: A.hs
example/package-a/src/PackageA/Other/: D.lhs
example/package-b/: BUILD.bazel
example/package-b/src/PackageB/Other/: B.hs
example/package-c/: BUILD.bazel
example/package-c/add-module-src/PackageC/Exposed/: A.hs  NewModule.hs
example/package-c/add-module-src/PackageC/Other/: B.hs
example/package-c/another-src/PackageC/Exposed/: A.hs  D.hs
example/package-c/checksrc/: CheckPackageCExplicit.hs  CheckPackageCMultipleSrcs.hs
example/package-c/explicit-src/Autodetect/: DepOnExplicit.hs  Root.hs
example/package-c/explicit-src/Explicit/: DepOnAuto.hs
example/package-c/multiple-folder-src/PackageC/Exposed/: E.hs
example/package-c/multiple-folder-src/PackageC/Other/: F.hs
example/package-c/src/PackageC/Other/: B.hs
example/package-c/tests/: DoesntCompile.hs
example/package-c/tests/PackageC/Other/: C.hs
example/package-d/: BUILD.bazel
example/package-d/src/PackageD/: A.hs  A.hs-boot  B.hs
example/package-d/tests/PackageD/: C.hs
gazelle_haskell_modules/: BUILD.bazel  dependency_resolution.go  lang.go  rule_generation.go  rule_generation_test.go
himportscan/: BUILD.bazel
himportscan/exe/: Main.hs
himportscan/src/HImportScan/: GHC.hs  GHC8_10.hs  GHC9_0.hs  GHC9_2.hs  GHC9_4.hs  GHC9_6.hs  ImportScanner.hs
himportscan/src/HImportScan/GHC/: FakeSettings8_10.hs  FakeSettings9_0.hs  FakeSettings9_2.hs  FakeSettings9_4.hs  FakeSettings9_6.hs  Settings.hs  Utils.hs
himportscan/tests/HImportScan/: ImportScannerSpec.hs
tests/alternative-deps/: BUILD.bazel  README.md  WORKSPACE  snapshot.yaml  stack_debug.diff
tests/alternative-deps/package-a/: BUILD.bazel
tests/alternative-deps/package-a/app/: Main.hs
tests/alternative-deps/package-b/: BUILD.bazel
tests/alternative-deps/package-c/: BUILD.bazel  README.md
tests/alternative-deps/package-c/src/PackageC/: A.hs  A.hs-boot  B.hs
tests/bundled_gazelle/: BUILD.bazel  README.md  WORKSPACE
tests/bundled_gazelle/test-project/: bundled-gazelle-test.cabal  package.yaml
tests/bundled_gazelle/test-project/src/: Fibo.hs  Power.hs
tests/bundled_gazelle/test-project/tests/: Main.hs
