load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files(["defs.bzl"])

buildifier(
    name = "buildifier-diff",
    buildifier = "@buildifier//:buildifier",
    diff_command = "diff -u",
    mode = "diff",
)

buildifier(
    name = "buildifier",
    buildifier = "@buildifier//:buildifier",
    lint_mode = "warn",
)
