load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

exports_files(["defs.bzl"])

buildifier_test(
    name = "buildifier-test",
    buildifier = "@buildifier//:buildifier",
    diff_command = "diff -u",
    no_sandbox = True,
    workspace = ":WORKSPACE",
)

buildifier(
    name = "buildifier",
    buildifier = "@buildifier//:buildifier",
    lint_mode = "warn",
)
