load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
    "haskell_test",
    "haskell_toolchain_library",
)

package(default_visibility = ["//visibility:public"])

haskell_toolchain_library(name = "base")

haskell_toolchain_library(name = "bytestring")

haskell_toolchain_library(name = "ghc")

haskell_toolchain_library(name = "text")

haskell_library(
    name = "himportscan-library",
    srcs = glob(["src/**/*.hs"]),
    compiler_flags = [
        "-Wall",
        "-Werror",
    ],
    deps = [
        ":base",
        ":bytestring",
        ":ghc",
        ":text",
        "@io_tweag_gazelle_haskell_modules_deps//:aeson",
        "@io_tweag_gazelle_haskell_modules_deps//:parsec",
    ],
)

haskell_binary(
    name = "himportscan",
    srcs = ["exe/Main.hs"],
    compiler_flags = [
        "-Wall",
        "-Werror",
    ],
    deps = [
        ":base",
        ":bytestring",
        ":ghc",
        ":himportscan-library",
        ":text",
        "@io_tweag_gazelle_haskell_modules_deps//:aeson",
    ],
)

haskell_test(
    name = "tasty",
    srcs = glob(["tests/**/*.hs"]),
    compiler_flags = [
        "-Wall",
        "-Werror",
        "-DTASTY_DISCOVER_TASTY_DISCOVER_PATH=$(location @stackage-exe//tasty-discover)",
    ],
    tools = [
        "@stackage-exe//tasty-discover",
    ],
    deps = [
        ":base",
        ":himportscan-library",
        ":text",
        "@stackage//:hspec",
        "@stackage//:string-qq",
        "@stackage//:tasty",
        "@stackage//:tasty-hspec",
    ],
)
