load("@rules_haskell//haskell:defs.bzl", "haskell_library", "haskell_test")

haskell_library(
    name = "package-b",
    srcs = [
        "src/PackageB/Exposed/A.hs",
        "src/PackageB/Other/B.hs",
    ],
    compiler_flags = [
        "-DVERSION_package_b=\"0.1.0.0\"",
        "-XScopedTypeVariables",
        "-lm",
    ],
    data = ["CHANGELOG.md"],
    hidden_modules = ["PackageB.Other.B"],
    version = "0.1.0.0",
    visibility = ["//visibility:public"],
    deps = [
        "//package-a",
        "@stackage//:base",
        "@stackage//:void",
    ],
)

# keep
haskell_test(
    name = "test",
    srcs = [
        "tests/Main.hs",
        "tests/PackageB/Other/C.hs",
    ],
    compiler_flags = [
        "-DVERSION_package_b=\"0.1.0.0\"",
        "-DTASTY_DISCOVER_TASTY_DISCOVER_PATH=$(location @stackage-exe//tasty-discover)",
    ],
    tools = ["@stackage-exe//tasty-discover"],
    version = "0.1.0.0",
    visibility = ["//visibility:public"],
    deps = [
        ":package-b",
        "@stackage//:base",
        "@stackage//:tasty",
        "@stackage//:tasty-hunit",
    ],
)
