load(
    "@bazel_gazelle//:def.bzl",
    "DEFAULT_LANGUAGES",
    "gazelle",
    "gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "@io_tweag_gazelle_cabal//gazelle_cabal",
        "@io_tweag_gazelle_haskell_modules//gazelle_haskell_modules",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

gazelle(
    name = "gazelle-update-repos",
    command = "update-repos",
    extra_args = [
        "-lang",
        "gazelle_cabal",
        "stackage",
    ],
    gazelle = ":gazelle_binary",
)
