load("@rules_haskell//haskell:defs.bzl", "haskell_library", "haskell_test")

haskell_library(
    name = "package-c",
    srcs = [
        "src/PackageC/A.hs",
        "src/PackageC/B.hs",
        "src/PackageC/A.hs-boot"
    ],
    compiler_flags = [
        "-DVERSION_package_b=\"0.1.0.0\"",
        "-XScopedTypeVariables",
        "-lm",
    ],
    data = ["CHANGELOG.md"],
    version = "0.1.0.0",
    visibility = ["//visibility:public"],
    deps = [
        "@stackage//:base",
        "@stackage//:void",
    ],
)

# gazelle_haskell_modules:keep
haskell_test(
    name = "test",
    srcs = [
        "tests/Main.hs",
        "tests/PackageC/C.hs",
    ],
    compiler_flags = [
        "-DVERSION_package_b=\"0.1.0.0\"",
        "-DTASTY_DISCOVER_TASTY_DISCOVER_PATH=$(location @stackage-exe//tasty-discover)",
    ],
    tools = ["@stackage-exe//tasty-discover"],
    version = "0.1.0.0",
    visibility = ["//visibility:public"],
    deps = [
        ":package-c",
        "@stackage//:base",
        "@stackage//:tasty",
        "@stackage//:tasty-hunit",
    ],
)
